--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
   <application
+    android:name="com.tools.App"
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
@@ -15,7 +16,7 @@
     <activity android:name=".MainActivity">
 
     </activity>
-    <activity android:name="com.tools.live.ScreenLiveActivity" >
+    <activity android:name="com.tools.live.ScreenLiveActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
