摄像头数据预览和处理

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -30,3 +30,13 @@ target_link_libraries(
         android
         z
         log)
+# 图像处理动态库
+add_library(
+        ImageUtils
+        SHARED
+        ImageUtils.cpp)
+
+target_link_libraries(
+        ImageUtils
+        yuv
+)
