--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,16 @@ android {
       version "3.10.2"
     }
   }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
 }
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation "androidx.camera:camera-core:1.0.0-alpha05"
+  implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
 }
