--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.CAMERA" />
 
   <application
     android:name="com.tools.App"
@@ -17,6 +18,9 @@
 
     </activity>
     <activity android:name="com.tools.live.ScreenLiveActivity">
+
+    </activity>
+    <activity android:name="com.tools.live.CameraLiveActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
