--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
 
     </activity>
     <activity android:name="com.tools.cv.OpenCVFaceTrackActivity">
+
+    </activity>
+    <activity android:name="com.tools.gl.OpenGLCameraPreview" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
